--- a/package.json
+++ b/package.json
@@ -19,11 +19,19 @@
     "url": "https://4lch4.dev"
   },
   "license": "BSD-2-Clause",
+  "dependencies": {
+    "@4lch4/axios-aid": "^1.2.2"
+  },
   "devDependencies": {
     "prettier": "^2.0.5",
     "typescript": "^3.9.3"
   },
-  "dependencies": {
-    "@4lch4/axios-aid": "^1.2.2"
+  "prettier": {
+    "singleQuote": true,
+    "arrowParens": "avoid",
+    "semi": false,
+    "tabWidth": 2,
+    "useTabs": false,
+    "trailingComma": "none"
   }
 }
