--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "package": "rm -rf ./dist; tsc --pretty",
     "install:clean": "rm -rf ./node_modules; rm -f pnpm-lock.yaml; pnpm i",
     "pretty:code": "prettier --write *.ts",
-    "pretty:project": "prettier --write ."
+    "pretty:project": "prettier --write .",
+    "test:local": "pnpm run package; pnpm run start:clean --prefix ./local-test"
   },
   "repository": {
     "type": "git",
