--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   },
   "license": "BSD-2-Clause",
   "dependencies": {
-    "@4lch4/axios-aid": "^1.2.2"
+    "axios": "^0.21.1"
   },
   "devDependencies": {
     "prettier": "2.0.5",
